# models/product.go
@@ -11,12 +11,14 @@ func (Produk) TableName() string {
 }
 
 type Produk struct {
-	ID        int            `json:"id"`
-	Nama      string         `json:"nama"`
-	Harga     int            `json:"harga"`
-	Stok      int            `json:"stok"`
-	IsActive  bool           `gorm:"default:true" json:"is_active"`
-	CreatedAt time.Time      `json:"created_at"`
-	UpdatedAt time.Time      `json:"updated_at"`
-	DeletedAt gorm.DeletedAt `gorm:"index" json:"deleted_at,omitempty"`
+	ID         int            `json:"id"`
+	Nama       string         `json:"nama"`
+	Harga      int            `json:"harga"`
+	Stok       int            `json:"stok"`
+	IsActive   bool           `gorm:"default:true" json:"is_active"`
+	CategoryId *int           `json:"category_id"`
+	CreatedAt  time.Time      `json:"created_at"`
+	UpdatedAt  time.Time      `json:"updated_at"`
+	DeletedAt  gorm.DeletedAt `gorm:"index" json:"deleted_at,omitempty"`
+	Category   Category       `gorm:"constraint:OnUpdate:CASCADE,OnDelete:RESTRICT;"`
 }
